--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "mocha test/bootstrap.test.js test/unit/**/*.test.js"
   },
   "main": "app.js",
   "repository": {
@@ -33,5 +34,8 @@
     "url": "git://github.com/hyper/sailsVoter.git"
   },
   "author": "hyper",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "supertest": "^1.0.1"
+  }
 }
